Modified build.xml so that jar is built in addition to the .cn1lib. This is very handy for inclusion of this library in other projects and for use in 'normal' java projects.
The other option is to include the /cn1json/build/classes in the lib directory of the including project as explained here (https://groups.google.com/d/msg/codenameone-discussions/rEXqUs3rmwk/baSXheEh3ewJ) but using a jar is way more contained and neater.

--- a/build.xml
+++ b/build.xml
@@ -56,7 +56,7 @@
          </javadoc>
     </target>
 
-    <target name="jar" depends="compile,Stubs">
+    <target name="-post-compile" depends="Stubs">
         <mkdir dir="build/lib" />
         <zip basedir="${build.classes.dir}" compress="false" destfile="build/lib/main.zip" />
         <zip basedir="build/stubs" compress="false" destfile="build/lib/stubs.zip" />
