Fixed JSONObject and JSONArray toString to work recursively for maps and lists.

--- a/build.xml
+++ b/build.xml
@@ -58,6 +58,7 @@
 
     <target name="-post-compile" depends="Stubs">
         <mkdir dir="build/lib" />
+        <mkdir dir="build/stubs"/>
         <zip basedir="${build.classes.dir}" compress="false" destfile="build/lib/main.zip" />
         <zip basedir="build/stubs" compress="false" destfile="build/lib/stubs.zip" />
         <copy file="manifest.properties" todir="build/lib" />
@@ -71,6 +72,7 @@
     </target>
 
     <target name="buildNativeRIM">
+        <mkdir dir="native/rim"/>
         <path id="rimNativeDir">
             <fileset dir="native/rim"/>
         </path> 
@@ -89,6 +91,7 @@
     </target>
 
     <target name="buildNativeAND">
+        <mkdir dir="native/android"/>
         <path id="andNativeDir">
             <fileset dir="native/android"/>
         </path> 
@@ -107,6 +110,7 @@
     </target>
 
     <target name="buildNativeWIN">
+        <mkdir dir="native/win"/>
         <path id="winNativeDir">
             <fileset dir="native/win"/>
         </path> 
@@ -125,6 +129,7 @@
     </target>
 
     <target name="buildNativeIOS">
+        <mkdir dir="native/ios"/>
         <path id="iosNativeDir">
             <fileset dir="native/ios"/>
         </path> 
@@ -143,6 +148,7 @@
     </target>
 
     <target name="buildNativeME">
+        <mkdir dir="native/j2me"/>
         <path id="meNativeDir">
             <fileset dir="native/j2me"/>
         </path> 
